added more files; connected to API

--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script defer src="src/api/index.js"></script>
+    <link rel="stylesheet" href="src/index.css">
     <title>Storefront</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- <div id="root"></div> -->
+    <section id="detail-container"></section>
+  <div id="new-product-form"></div>
+  <section id="all-products-container"></section>
+
+    <h2>Your Roster</h2>
+    <section id="roster-container"></section>
+    <!-- <script type="module" src="/src/main.jsx"></script> -->
   </body>
 </html>
