added shopping cart

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
   <div id="new-product-form"></div>
   <section id="all-products-container"></section>
 
-    <h2>Your Roster</h2>
-    <section id="roster-container"></section>
+    <!-- <h2>Your Cart</h2>
+    <section id="cart-container"></section> -->
     <!-- <script type="module" src="/src/main.jsx"></script> -->
   </body>
 </html>
+
+<h1>
+  <a href="src/cart.html">Cart</a>
+</h1>
