--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <title>Storefront</title>
   </head>
   <body>
-    <!-- <div id="root"></div> -->
     <section id="detail-container"></section>
-  <div id="new-product-form"></div>
+    <!-- <div id="root"></div> -->
+    <div></div>
+    
   <section id="all-products-container"></section>
 
     <!-- <h2>Your Cart</h2>
