--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="src/api/index.js"></script>
+    <script defer type="module" src="src/api/index.js"></script>
     <link rel="stylesheet" href="src/index.css">
     <title>Storefront</title>
   </head>
